--- a/docker-compose/couchdb-3.yml
+++ b/docker-compose/couchdb-3.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
   couchdb:
     image: public.ecr.aws/medic/cht-couchdb:4.2.0-7964-couch3
+    #image: 15a06657eafe
     volumes:
       - ${COUCHDB_DATA:-./srv}:/opt/couchdb/data
       - cht-credentials:/opt/couchdb/etc/local.d/
@@ -19,7 +20,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: ${NBR_CPU:-'12'}
+          cpus: ${NBR_CPU:-'4'}
 
 volumes:
   cht-credentials:
